Fix footer overlapping with chef selector issue

--- a/grubmenow-webapp/src/main/webapp/webassets/app.css
+++ b/grubmenow-webapp/src/main/webapp/webassets/app.css
@@ -12,6 +12,7 @@ html, body{
 
 .bodyMain {
      padding-bottom: 44px;
+     overflow: auto;
 }
 
 a:link {
